--- a/gradientPractice/gradientPractice.html
+++ b/gradientPractice/gradientPractice.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="linear gradient, radial gradient, CSS property">
     <meta name="author" content="student name">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="../GradientPractice/css/gradientStyles.css">
+	<link rel="stylesheet" type="text/css" href="css/gradientStyles.css">
 	
 	<title>Gradients</title>
 </head>
