--- a/personalportfolio/index.html
+++ b/personalportfolio/index.html
@@ -52,7 +52,7 @@
 
       <nav id= "nav2">
           <a href="Contact.html">
-    <img src="images/form1(1).png" alt="Picture of Form logo">
+    <img src="images/form1.png" alt="Picture of Form logo">
         </a>
       </nav> <hr>
     </main>
